@@ -1,5 +1,6 @@
 package net.explorviz.token.service.messaging;
 
+import com.google.protobuf.InvalidProtocolBufferException;
 import io.quarkus.test.common.QuarkusTestResource;
 import io.quarkus.test.junit.QuarkusTest;
 import io.smallrye.reactive.messaging.memory.InMemoryConnector;
@@ -7,8 +8,8 @@ import io.smallrye.reactive.messaging.memory.InMemorySink;
 import jakarta.enterprise.inject.Any;
 import jakarta.inject.Inject;
 import java.util.Collections;
-import net.explorviz.avro.EventType;
-import net.explorviz.avro.TokenEvent;
+import net.explorviz.proto.EventType;
+import net.explorviz.proto.TokenEvent;
 import net.explorviz.token.model.LandscapeToken;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
@@ -17,10 +18,8 @@ import org.junit.jupiter.api.Test;
 @QuarkusTestResource(FakeKafkaResource.class)
 class UserApiEventServiceImplTest {
 
-
   @Inject
   EventServiceImpl service;
-
 
   @Inject
   @Any
@@ -34,13 +33,17 @@ class UserApiEventServiceImplTest {
         new LandscapeToken(tokenValue, "secret", uid, 0, "", Collections.emptyList());
 
     final TokenEvent testEvent =
-        TokenEvent.newBuilder().setToken(token.toAvro()).setType(EventType.CREATED)
-            .setClonedToken("").build();
+        TokenEvent.newBuilder().setToken(token.toProtobuf()).setType(EventType.EVENT_TYPE_CREATED).build();
 
-    final InMemorySink<TokenEvent> events = this.connector.sink("token-events");
+    final InMemorySink<byte[]> events = this.connector.sink("token-events");
     this.service.dispatch(testEvent);
 
-    final TokenEvent got = events.received().get(0).getPayload();
+    final TokenEvent got;
+    try {
+      got = TokenEvent.parseFrom(events.received().getFirst().getPayload());
+    } catch (InvalidProtocolBufferException e) {
+      throw new RuntimeException(e);
+    }
     Assertions.assertEquals(testEvent, got);
   }
 
